# agentic-platform

./: .env.cp  .gitignore  .gitmodules  CLAUDE.md  README.md
assignment/: Dockerfile  go.mod
cluster/: cluster.yaml
cluster/cell-1/: cluster.yaml  machinepool.yaml
cluster/cell-2/: cluster.yaml  machinepool.yaml
cluster/control-plane/: cluster.yaml  machinepool.yaml
cluster/iam-policies/: cluster-autoscaler-policy.json  langfuse-s3-policy.json
cluster/management/: cluster.yaml
cluster/observability/: cluster.yaml  machinepool.yaml
cluster/shared/: ebs-csi-driver-trust-policy.json  storageclass-gp3.yaml
cluster/transit-gateway/: .gitignore  create-tgw.sh  teardown-tgw.sh
docs/: data-plane-request-flow.md
examples/: README.md
examples/01-tool-discovery/: README.md  manifests.yaml
examples/02-dynamic-mcp/: README.md  manifests.yaml
examples/02-dynamic-mcp/agent/: Dockerfile  pyproject.toml
examples/02-dynamic-mcp/agent/mcp_deployer/: agent-card.json  agent.py  tools.py
examples/03-governed-egress/: README.md  manifests.yaml
executor/: Dockerfile  Makefile  go.mod  go.sum
mycelium/: .gitignore  Makefile  TODO.md  controller-review.md  go.mod  go.sum  go.work.sum
platform/: README.md  helmfile.yaml
pool-operator/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum
scripts/: 00-create-cluster.sh  01-create-aws-resources.sh  02-create-secrets.sh  03-deploy-platform.sh  04-post-install.sh  05-onboard-tenant.sh  06-configure-keycloak.sh  07-configure-openfga.sh  apply.sh  port-forward.sh  setup-gateway-api-crds.sh
tests/: run-all.sh
(+505 files in other folders)
